<resources>
    <string name="app_name">PetsApp</string>
    <string name="action_settings">Settings</string>
    <string name="add_first_pet">Add First Pet</string>
    <string name="pet_name_hint">Name</string>
    <string name="add_your_pet">Add Your Pet</string>
    <string name="birthday_hint">Birthday (mm/dd/yy)</string>
    <string name="save_pet_button">Save Pet</string>
    <string name="title_activity_list">How Old Are You?</string>
    <string name="sure_text"> Delete Pet : Are You Sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="edit_pet_title">Edit Your Pet</string>
    <string name="edit_pet">Edit Pet</string>
    <string name="click_to_add">Add Image Image</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="dog_eating_cake">Dog eating cake</string>
    <string name="pet_list">pet list</string>
    <string name="name_input">name input</string>
    <string name="birthday_input">birthday input</string>
    <string name="click_to_add_photo_label">click to add photo label</string>
    <string name="add_your_pet_label">add your pet label</string>
    <string name="add_your_pet_s_birthday_here">add your pet\'s birthday here</string>
    <string name="add_pet">Add Pet</string>
</resources>
