<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout_id"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/add_your_pet"
                android:textSize="25sp"
                android:textStyle="italic" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@id/petBirthday"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:background="@drawable/pawoutline"
                android:contentDescription="Click to Add Photo"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/addPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageButton"
                android:layout_centerInParent="true"
                android:text="Click to Add Photo" />


            <EditText
                android:id="@+id/petName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:autofillHints=""
                android:hint="@string/pet_name_hint"
                android:inputType=""
                android:paddingTop="25dp" />

            <EditText
                android:id="@+id/petBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/petName"
                android:layout_centerInParent="true"
                android:autofillHints=""
                android:hint="@string/birthday_hint"
                android:inputType=""
                android:paddingTop="25dp" />

            <Button
                android:id="@+id/savePet"
                android:layout_width="748dp"
                android:layout_height="70dp"
                android:layout_below="@id/addPhoto"
                android:layout_marginTop="46dp"
                android:background="@color/colorAccent"
                android:text="@string/save_pet_button"
                android:textColor="@android:color/background_light" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>